# yadooc

./: CMakeLists.txt  README.md
assets/maps/: doom_stairs.csv  doom_stairs.drawio  doom_stairs.txt  doom_stairs_complex.txt  doom_stairs_textures.csv  doom_stairs_textures.txt  sd.txt  sd_textures.txt
include/: yadooc.hpp  yar.hpp
include/map/: floor.hpp  map.hpp  prism.hpp  solid.hpp
include/rendering/: camera.hpp  projection.hpp  renderer.hpp  vertical_surface.hpp
include/util/: comp_t.hpp  lalgebra.hpp  texture.hpp  vec2.hpp  vec3.hpp  vertical_surface.hpp
src/: main.cpp  map.cpp  yadooc.cpp  yar.cpp
src/rendering/: camera.cpp  renderer.cpp
src/util/: lalgebra.cpp  vec2.cpp  vec3.cpp
